--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^3.1.10",
     "mongoose": "^7.8.3",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "passport": "0.7.0",
     "passport-jwt": "^4.0.1",
@@ -56,6 +57,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-local": "^1.0.38",
