--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "p-limit": "^6.2.0",
     "passport": "0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "1.0.0",
