add github action deploy

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -20,3 +20,25 @@ jobs:
         run: echo "${{ secrets.ENV_PRODUCTION }}" >> .env
       - run: npm i --force
       - run: npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Executing remote ssh commands using ssh key'
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.HOST_PRODUCTION }}
+          username: ${{ secrets.USERNAME_PRODUCTION }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.PORT_PRODUCTION }}
+          script: |
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
+            cd ~/backend-nestjs-furniro-dev
+            git fetch --all
+            git reset --hard origin/master
+            echo "${{ secrets.ENV_PRODUCTION }}" > .env
+            npm install --force
+            npm run build
+            pm2 restart "BE Furniro dev"
+            
